Adds ML-KEM, and some README/index.html updates for general usability

--- a/src/draft-celi-acvp-ml-kem.adoc
+++ b/src/draft-celi-acvp-ml-kem.adoc
@@ -25,7 +25,7 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: ML-KEM
+:spec-algorithm: Module Lattice-based Key Encapsulation Mechanism (ML-KEM)
 :algo-short-name: ML-KEM
 
 include::common/common-sections/00-abstract.adoc[]
@@ -46,9 +46,7 @@ include::ml-kem/sections/05-capabilities.adoc[]
 
 include::ml-kem/sections/05-ml-kem-keygen-capabilities.adoc[]
 
-include::ml-kem/sections/05-ml-kem-encapsulation-capabilities.adoc[]
-
-include::ml-kem/sections/05-ml-kem-decapsulation-capabilities.adoc[]
+include::ml-kem/sections/05-ml-kem-encapdecap-capabilities.adoc[]
 
 include::common/common-sections/06-test-vector-intro.adoc[]
 
@@ -56,17 +54,13 @@ include::ml-kem/sections/06-test-vectors.adoc[]
 
 include::ml-kem/sections/06-ml-kem-keygen-test-vectors.adoc[]
 
-include::ml-kem/sections/06-ml-kem-encapsulation-test-vectors.adoc[]
-
-include::ml-kem/sections/06-ml-kem-decapsulation-test-vectors.adoc[]
+include::ml-kem/sections/06-ml-kem-encapdecap-test-vectors.adoc[]
 
 include::ml-kem/sections/07-responses.adoc[]
 
 include::ml-kem/sections/07-ml-kem-keygen-responses.adoc[]
 
-include::ml-kem/sections/07-ml-kem-encapsulation-responses.adoc[]
-
-include::ml-kem/sections/07-ml-kem-decapsulation-responses.adoc[]
+include::ml-kem/sections/07-ml-kem-encapdecap-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
