--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1194,9 +1194,6 @@ The server is not required to remove the resource but *MUST* return a `rejection
 === Algorithms
 
 The Algorithm resources are informational only.
-////
- -- Do we want to provide guidance on standardizing the output?
-////
 
 [[algorithms_get]]
 ==== Algorithms Listing
@@ -1213,21 +1210,16 @@ Returns a list of available algorithms on the server.
     {"acvVersion": "{acvp-version}"},
     {"algorithms": [
         {
-            "url": "/acvp/v1/algorithms/2",
+            "id": 1,
             "name": "AES",
             "mode": "GCM",
-            "versions": [
-                "{acvp-version1}",
-                "{acvp-version2}"
-            ]
+            "revision": "v1.0"
         },
         {
-            "url": "/acvp/v1/algorithms/3",
+            "id": 2,
             "name": "AES",
             "mode": "ECB",
-            "versions": [
-                "{acvp-version}"
-            ]
+            "revision": "v1.0"
         }
     ]}
 ]
@@ -1243,10 +1235,6 @@ Retrieve Information for about a specific algorithm.
 ===== Response
 
 Response may vary from server depending on internal representation.
-
-////
- -- Is this ok? Or do we want to standardize?
-////
 
 [[validations]]
 === Validations
