--- a/src/ecdsa/sections/05-ecdsa-keyver-capabilities.adoc
+++ b/src/ecdsa/sections/05-ecdsa-keyver-capabilities.adoc
@@ -16,7 +16,7 @@ The complete list of ECDSA / keyVer / 1.0 capabilities *MAY* be advertised by th
 |===
 | JSON Value | Description | JSON type | Valid Values
 
-| curve | The curve names supported for the IUT in keyVer. | array | Any non-empty subset of {"P-192", "P-224", "P-256", "P-384", "P-521", "B-163", "B-233", "B-283", "B-409", "B-571", "K-163", "K-233", "K-283", "K-409", "K-571"}
+| curve | The curve names supported for the IUT in keyVer. | array | Any non-empty subset of {"P-192", "P-224", "P-256", "P-384", "P-521"}
 |===
 
 Below is an example of the registration for ECDSA / keyVer / 1.0
@@ -63,7 +63,7 @@ The complete list of ECDSA / keyVer / FIPS186-5 capabilities *MAY* be advertised
 |===
 | JSON Value | Description | JSON type | Valid Values
 
-| curve | The curve names supported for the IUT in keyVer. | array | Any non-empty subset of {"P-224", "P-256", "P-384", "P-521"}
+| curve | The curve names supported for the IUT in keyVer. | array | Any non-empty subset of {"P-224", "P-256", "P-384", "P-521", "B-233", "B-283", "B-409", "B-571", "K-233", "K-283", "K-409", "K-571"}
 |===
 
 Below is an example of the registration for ECDSA / keyVer / FIPS186-5
