--- a/src/ecdsa/sections/05-capabilities.adoc
+++ b/src/ecdsa/sections/05-capabilities.adoc
@@ -32,4 +32,4 @@ Each ECDSA algorithm capability advertised is a self-contained JSON object using
 | componentTest | If the hash is performed outside of the boundary of the algorithm, setting this to true will cause the messages to be pre-hashed when provided by the server | boolean | true or false
 |===
 
-NOTE: The 'componentTest' property is only valid for detECDSA / sigGen / FIPS186-5, ECDSA / sigGen / * and ECDSA / sigVer / * registrations.
+NOTE: The 'componentTest' property is only valid for detECDSA / sigGen / FIPS186-5 and ECDSA / sigGen / * registrations.
