--- a/src/ecdsa/sections/05-ecdsa-siggen-capabilities.adoc
+++ b/src/ecdsa/sections/05-ecdsa-siggen-capabilities.adoc
@@ -16,7 +16,7 @@ The complete list of ECDSA / sigGen / 1.0 capabilities *MAY* be advertised by th
 |===
 | JSON Value | Description | JSON type | Valid Values
 
-| curve | The curves supported with a particular set of hash algorithms. | array | Any non-empty subset of {"P-224", "P-256", "P-384", "P-521"}
+| curve | The curves supported with a particular set of hash algorithms. | array | Any non-empty subset of {"P-224", "P-256", "P-384", "P-521", "B-233", "B-283", "B-409", "B-571", "K-233", "K-283", "K-409", "K-571"}
 | hashAlg | The hash functions supported when signing a message for a particular set of curves. | array | Any non-empty subset of {"SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256", "SHA3-224", "SHA3-256", "SHA3-384", "SHA3-512"}
 |===
 
