Adds SLH-DSA and misc. updates
Misc ML-DSA updates:
* removes "GDT" test type
* adds the messageLength registration property

Minor updates to Test Vectors section of LMS, ML-DSA, and ML-KEM specs

--- a/src/common/common-sections/06-test-vector-intro.adoc
+++ b/src/common/common-sections/06-test-vector-intro.adoc
@@ -2,7 +2,7 @@
 [#test-vectors]
 == Test Vectors
 
-The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation test session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual algorithm defined during the capability exchange. This section describes the JSON schema for a test vector set used with {spec-algorithm} algorithms.
+The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation test session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual cryptographic algorithm defined during the capability exchange. This section describes the JSON schema for a test vector set used with {spec-algorithm} algorithms.
 
 The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client. The following table describes the JSON elements at the top level of the hierarchy.
 
@@ -15,7 +15,7 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 | algorithm | Algorithm defined in the capability exchange | string
 | mode | Mode defined in the capability exchange | string
 | revision | Protocol test revision selected | string
-| testGroups | Array of test groups containing test data, see <<tgjs>> | array
+| testGroups | Array of test group JSON objects, which are defined in <<tgjs>> | array
 |===
 
 An example of this would look like this
