--- a/src/draft-celi-acvp-lms.adoc
+++ b/src/draft-celi-acvp-lms.adoc
@@ -50,7 +50,7 @@ include::lms/sections/05-lms-siggen-capabilities.adoc[]
 
 include::lms/sections/05-lms-sigver-capabilities.adoc[]
 
-include::common/common-sections/06-test-vector-intro.adoc[]
+//include::common/common-sections/06-test-vector-intro.adoc[]
 
 include::lms/sections/06-test-vectors.adoc[]
 
