--- a/src/draft-celi-acvp-ml-dsa.adoc
+++ b/src/draft-celi-acvp-ml-dsa.adoc
@@ -50,7 +50,7 @@ include::ml-dsa/sections/05-ml-dsa-siggen-capabilities.adoc[]
 
 include::ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc[]
 
-include::common/common-sections/06-test-vector-intro.adoc[]
+//include::common/common-sections/06-test-vector-intro.adoc[]
 
 include::ml-dsa/sections/06-test-vectors.adoc[]
 
