--- a/src/draft-celi-acvp-ml-kem.adoc
+++ b/src/draft-celi-acvp-ml-kem.adoc
@@ -48,7 +48,7 @@ include::ml-kem/sections/05-ml-kem-keygen-capabilities.adoc[]
 
 include::ml-kem/sections/05-ml-kem-encapdecap-capabilities.adoc[]
 
-include::common/common-sections/06-test-vector-intro.adoc[]
+//include::common/common-sections/06-test-vector-intro.adoc[]
 
 include::ml-kem/sections/06-test-vectors.adoc[]
 
