--- a/src/ecdsa/sections/06-ecdsa-keyver-test-vectors.adoc
+++ b/src/ecdsa/sections/06-ecdsa-keyver-test-vectors.adoc
@@ -4,7 +4,7 @@
 [[ecdsa_keyVer_tgjs]]
 ==== ECDSA keyVer Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {algo-short-name} JSON elements of the Test Group JSON object.
 
 The test group for ECDSA / keyVer / * is as follows:
 
@@ -13,13 +13,14 @@ The test group for ECDSA / keyVer / * is as follows:
 |===
 | JSON Value | Description | JSON type
 
+| tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | curve | The curve type used for the test group | string
 | tests | Array of individual test vector JSON objects, which are defined in <<ecdsa_keyVer_tvjs>> | array
 |===
 
 [[ecdsa_keyVer_tvjs]]
-==== ECDSA keyVer Test Groups JSON Schema
+==== ECDSA keyVer Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each ECDSA test vector.
 
