--- a/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
@@ -4,7 +4,7 @@
 [[ML-DSA_sigGen_tgjs]]
 ==== ML-DSA sigGen Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {algo-short-name} JSON elements of the Test Group JSON object.
 
 The test group for ML-DSA / sigGen / FIPS204 is as follows:
 
@@ -13,6 +13,7 @@ The test group for ML-DSA / sigGen / FIPS204 is as follows:
 |===
 | JSON Value | Description | JSON type
 
+| tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | parameterSet | The ML-DSA parameter set used | string
 | deterministic | Whether the signatures should be generated using the deterministic or non-deterministic routine | boolean
@@ -20,7 +21,7 @@ The test group for ML-DSA / sigGen / FIPS204 is as follows:
 |===
 
 [[ML-DSA_sigGen_tvjs]]
-==== ML-DSA sigGen Test Groups JSON Schema
+==== ML-DSA sigGen Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each ML-DSA test vector.
 
