--- a/src/rsa/sections/06-keygen-test-vectors.adoc
+++ b/src/rsa/sections/06-keygen-test-vectors.adoc
@@ -9,6 +9,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 |===
 | JSON Value | Description | JSON type
 
+| tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | modulo | RSA modulus size | integer
 | hashAlg | the hash algorithm | string
 | primeTest | Miller-Rabin constraint bound | string
