--- a/src/slh-dsa/sections/06-test-vectors.adoc
+++ b/src/slh-dsa/sections/06-test-vectors.adoc
@@ -1,6 +1,3 @@
-
-
-
 == Test Vectors
 
 The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation test session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual cryptographic algorithm defined during the capability exchange. This section describes the JSON schema for a test vector set used with {spec-algorithm} algorithms.
@@ -16,7 +13,7 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 | algorithm | Algorithm defined in the capability exchange | string
 | mode | Mode defined in the capability exchange | string
 | revision | Protocol test revision selected | string
-| testGroups | Array of test group JSON objects. Depending on the algorithm, see <<LMS_keyGen_tgjs>>, <<LMS_sigGen_tgjs>> or <<LMS_sigVer_tgjs>> | array
+| testGroups | Array of test group JSON objects. Depending on the algorithm, see <<SLH-DSA_keyGen_tgjs>>, <<SLH-DSA_sigGen_tgjs>> or <<SLH-DSA_sigVer_tgjs>> | array
 |===
 
 An example of this would look like this
@@ -36,4 +33,3 @@ An example of this would look like this
   }
 ]
 ----
-
