--- a/src/slh-dsa/sections/07-slh-dsa-siggen-responses.adoc
+++ b/src/slh-dsa/sections/07-slh-dsa-siggen-responses.adoc
@@ -1,10 +1,10 @@
-[[ML-DSA_sigGen_vector_responses]]
-=== ML-DSA sigGen Test Vector Responses
+[[SLH-DSA_sigGen_vector_responses]]
+=== SLH-DSA sigGen Test Vector Responses
 
-Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each ML-DSA / sigGen / FIPS204 test vector.
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents the results of an ACVP client processing a single test vector. The following table describes the JSON elements for each SLH-DSA / sigGen / FIPS205 test vector.
 
-[[ML-DSA_sigGen_vs_tr_table]]
-.ML-DSA sigGen Test Case Response JSON Object
+[[SLH-DSA_sigGen_vs_tr_table]]
+.SLH-DSA sigGen Test Case Response JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -12,7 +12,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | signature | The generated signature | hex
 |===
 
-The following is an example JSON test vector response object for ML-DSA / sigGen / FIPS204.
+The following is an example JSON test vector response object for SLH-DSA / sigGen / FIPS205.
 
 [source, json]
 ----
