--- a/src/lms/sections/06-lms-siggen-test-vectors.adoc
+++ b/src/lms/sections/06-lms-siggen-test-vectors.adoc
@@ -4,7 +4,7 @@
 [[LMS_sigGen_tgjs]]
 ==== LMS sigGen Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {algo-short-name} JSON elements of the Test Group JSON object.
 
 The test group for LMS / sigGen / 1.0 is as follows:
 
@@ -13,6 +13,7 @@ The test group for LMS / sigGen / 1.0 is as follows:
 |===
 | JSON Value | Description | JSON type
 
+| tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | lmsMode | The LMS tree structure used | string
 | lmOtsMode | The LMOTS tree structure used | string
@@ -20,7 +21,7 @@ The test group for LMS / sigGen / 1.0 is as follows:
 |===
 
 [[LMS_sigGen_tvjs]]
-==== LMS sigGen Test Groups JSON Schema
+==== LMS sigGen Test Case JSON Schema
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each LMS test vector.
 
