--- a/src/ml-dsa/sections/05-capabilities.adoc
+++ b/src/ml-dsa/sections/05-capabilities.adoc
@@ -29,6 +29,8 @@ Each ML-DSA algorithm capability advertised is a self-contained JSON object usin
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | parameterSets | The ML-DSA parameter sets supported | array of strings | "ML-DSA-44", "ML-DSA-65", "ML-DSA-87"
 | deterministic | The ML-DSA signature generation modes supported | array of booleans | true, false
+| messageLength | The supported message lengths in bits | domain | Min: 8, Max: 65536, Incr: 8
 |===
 
-Note: The deterministic property is only applicable to ML-DSA / sigGen / FIPS204. 
+NOTE: The deterministic and messageLength properties are only applicable to ML-DSA / sigGen / FIPS204. 
+
