--- a/src/ml-kem/sections/06-ml-kem-keygen-test-vectors.adoc
+++ b/src/ml-kem/sections/06-ml-kem-keygen-test-vectors.adoc
@@ -4,7 +4,7 @@
 [[ML-KEM_keyGen_tgjs]]
 ==== ML-KEM keyGen Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the {algo-short-name} JSON elements of the Test Group JSON object.
 
 The test group for ML-KEM / keyGen / FIPS203 is as follows:
 
@@ -13,6 +13,7 @@ The test group for ML-KEM / keyGen / FIPS203 is as follows:
 |===
 | JSON Value | Description | JSON type
 
+| tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | parameterSet | The ML-KEM parameter set used | string
 | tests | Array of individual test vector JSON objects, which are defined in <<ML-KEM_keyGen_tvjs>> | array
