Adds interesting test cases to ML-DSA SigGen

--- a/src/ml-dsa/sections/98-references.adoc
+++ b/src/ml-dsa/sections/98-references.adoc
@@ -33,3 +33,12 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
+
+[%bibitem]
+=== PQC-Forum
+id:: PQC-Forum
+docid::
+  id::: PQC-Forum
+link::
+link.type:: src
+link.content:: https://groups.google.com/a/list.nist.gov/g/pqc-forum/c/G8Zf0hC-uu0/m/Kb3qNJb0AwAJ
