Fixes reference again

--- a/src/ml-dsa/sections/98-references.adoc
+++ b/src/ml-dsa/sections/98-references.adoc
@@ -36,9 +36,9 @@ date.value:: 2019-07-01
 
 [%bibitem]
 === PQC-Forum
-id:: PQC-Forum
+id:: PQCForum
 docid::
-  id::: PQC-Forum
+  id::: PQCForum
 link::
 link.type:: src
 link.content:: https://groups.google.com/a/list.nist.gov/g/pqc-forum/c/G8Zf0hC-uu0/m/Kb3qNJb0AwAJ
