--- a/src/ml-dsa/sections/05-ml-dsa-siggen-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-siggen-capabilities.adoc
@@ -17,6 +17,7 @@ Below is an example of the registration for ML-DSA / sigGen / FIPS204
         }
     ],
     "parameterSets": ["ML-DSA-44", "ML-DSA-65", "ML-DSA-87"],
-    "deterministic": [true, false]
+    "deterministic": [true, false],
+    "messageLength": [{"min": 8, "max": 65536", "increment": 8}]
 }
 ----
