--- a/src/mac/sections/05-hmac-capabilities.adoc
+++ b/src/mac/sections/05-hmac-capabilities.adoc
@@ -13,7 +13,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 
 | algorithm | The MAC algorithm and mode to be validated | string | See <<hmac_supported_algs>>
 | revision | The algorithm testing revision to use | string | "1.0"
-| prereqVals | prerequistie algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
+| prereqVals | prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | keyLen | The keyLen Domain supported by the IUT in bits | domain | Min: 8, Max: 524288, Increment: 8
 | macLen | The supported mac sizes, maximum is dependent on algorithm, see <<hmac_supported_algs>> | domain | Min: 32
 |===
