updates description of functionName for cSHAKE

--- a/src/xof/sections/06-test-vectors.adoc
+++ b/src/xof/sections/06-test-vectors.adoc
@@ -37,7 +37,7 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 | len | Length of the message or seed for cSHAKE, KMAC and ParallelHash | integer
 | len | Length of each tuple for TupleHash | array of integer
 | outLen | Length of the digest | integer
-| functionName | The function name used in the XOF | string
+| functionName | Only applies to cSHAKE. The value to use for the function-name input to cSHAKE, denoted as _N_ in Section 3.2 of <<SP800-185>>. | string
 | customization | The ASCII customization string used (between 0 and 161 ASCII characters in length) | string
 | customizationHex | The hex customization string used (between 0 and 322 hex characters in length) | hex
 | msg | Value of the message or seed. Messages are represented as little-endian hex for all SHA3 variations | hex
