Updated documentation for counterFieldLen support added to AES ctrDRBG

--- a/src/drbg/sections/06-test-vectors.adoc
+++ b/src/drbg/sections/06-test-vectors.adoc
@@ -96,6 +96,7 @@ Here is an abbreviated yet fully constructed example of the prompt
       "persoStringLen": 256,
       "additionalInputLen": 256,
       "returnedBitsLen": 512,
+      "counterFieldLen": 100,
       "mode": "AES-128",
       "tests": [
         {
