--- a/src/drbg/sections/97-examples.adoc
+++ b/src/drbg/sections/97-examples.adoc
@@ -39,7 +39,8 @@ The following is a example JSON object advertising support for ctrDRBG with TDES
       "additionalInputLen": [
         256
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 75
     },
     {
       "mode": "AES-192",
@@ -73,7 +74,8 @@ The following is a example JSON object advertising support for ctrDRBG with TDES
       "additionalInputLen": [
         384
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 100
     },
     {
       "mode": "TDES",
@@ -124,7 +126,8 @@ The following is a example JSON object advertising support for ctrDRBG with TDES
       "additionalInputLen": [
         320
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 10
     },
     {
       "mode": "AES-256",
@@ -141,7 +144,8 @@ The following is a example JSON object advertising support for ctrDRBG with TDES
       "additionalInputLen": [
         384
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 50
     },
     {
       "mode": "TDES",
@@ -336,6 +340,7 @@ The following is a example JSON object for ctrDRBG test vectors sent from the AC
         "persoStringLen": 112,
         "additionalInputLen": 112,
         "returnedBitsLen": 256,
+        "counterFieldLen": 100,
         "tests": [
           {
             "tcId": 1815,
