--- a/src/drbg/sections/98-references.adoc
+++ b/src/drbg/sections/98-references.adoc
@@ -6,6 +6,7 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 * [[[SP800-90A,NIST SP 800-90A]]]
+* [[[SP800-90Ar1,NIST SP 800-90Ar1]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
