--- a/src/drbg/sections/XX-examples.adoc
+++ b/src/drbg/sections/XX-examples.adoc
@@ -39,7 +39,8 @@ The following is a example JSON object advertising support for ctrDRBG with 3Key
       "additionalInputLen": [
         256
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 100
     },
     {
       "mode": "AES-192",
@@ -141,7 +142,8 @@ The following is a example JSON object advertising support for ctrDRBG with 3Key
       "additionalInputLen": [
         384
       ],
-      "returnedBitsLen": 512
+      "returnedBitsLen": 512,
+      "counterFieldLen": 100
     },
     {
       "mode": "TDES",
