--- a/src/eddsa/sections/06-eddsa-sigver-test-vectors.adoc
+++ b/src/eddsa/sections/06-eddsa-sigver-test-vectors.adoc
@@ -14,7 +14,7 @@ The test group for EDDSA / sigVer / 1.0 is as follows:
 | curve | The curve type used for the test vectors | string
 | prehash | Whether or not Prehash EdDSA/HashEdDSA (vs normal/'pure' EdDSA) should be used for the test vectors | boolean
 | testType | The testType for the group | string
-| tests | Array of individual test vector JSON objects, which are defined in U<<EDDSA_sigVer_tvjs>> | array
+| tests | Array of individual test vector JSON objects, which are defined in <<EDDSA_sigVer_tvjs>> | array
 |===
 
 [[EDDSA_sigVer_tvjs]]
