Suggested changes from PR gh1548

--- a/src/drbg/sections/03-supported.adoc
+++ b/src/drbg/sections/03-supported.adoc
@@ -11,3 +11,5 @@ The following deterministic random bit generator algorithms *MAY* be advertised 
 === Counter DRBG Triple-DES
 
 The "ctrDRBG-TDES" mode shall only be used with the three-key option of the Triple-DES algorithm.
+
+NOTE: TDES is no longer supported and is end-of-life as of 1/1/2024; please refer to https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-131Ar2.pdf for more information.
