--- a/src/drbg/sections/05-capabilities.adoc
+++ b/src/drbg/sections/05-capabilities.adoc
@@ -36,7 +36,7 @@ Each DRBG algorithm capability advertised is a self-contained JSON object. A reg
 | persoStringLen | Personalization string length. See the notes below. | domain | Min: maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported
 | additionalInputLen | See the notes below. | domain | Min: maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported
 | returnedBitsLen | Returned bits length | integer | Min: See <<supported_values>>, Max: 4096.
-| counterFieldLen | Optional: See the notes below. | integer | Min: 4, Max: 128. Set to 128 if not altered
+| counterFieldLen | The length of the counter field in bits. This property is 1) optional and 2) only available for the ctrDRBG algorithm and "AES-128", "AES-192", and "AES-256" modes. See the note below. If omitted, tests are generated using a 128-bit counter. | integer | Min: 4, Max: 128
 |===
 
  
@@ -54,7 +54,7 @@ NOTE: ACVP allows bit length values for 'persoString' ranging from the maximum s
 
 NOTE: The 'addtionalInput' configuration and restrictions are the same as those for the 'persoString'.
 
-NOTE: The custom 'counterFieldLen' was introduced in the SP800-90Ar1 update. This is only valid for AES and not TDES ctrDRBG, please refer to SP800-90Ar1 for guidance.
+NOTE: The 'counterFieldLen' property was introduced to support the concept of counter field length as introduced in SP800-90Ar1. See SP800-90Ar1 Section 10.2.1, Table 3
 
 [[value_req_per_option]]
 === Supported values per DRBG option
@@ -99,6 +99,8 @@ DRBG minimum/maximum values for the properties listed in <<capabilities-table>> 
 |===
 
 NOTE: If an implementation utilizes a nonce in the construction of a seed during instantiation, the length of the nonce shall be at least half the maximum security strength supported. The values listed in the Min Nonce Len column of <<supported_values>> are the maximum security strength / 2. Per allowances in <<SP800-90A>>, the length of a nonce may be less than 1/2 the maximum security strength supported as long as the entropy input length + the nonce length >= 3/2 security strength. If the entropy input length is >= 3/2 security strength the minimum nonce length will be 0.
+
+NOTE: TDES is no longer supported and is end-of-life as of 1/1/2024; please refer to https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-131Ar2.pdf for more information.
 
 === DRBG Registration Example
 
