--- a/src/drbg/sections/06-test-vectors.adoc
+++ b/src/drbg/sections/06-test-vectors.adoc
@@ -18,6 +18,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | persoStringLen | Personalization string length; set to 0 if not used/supported. See also notes after <<capabilities-table>> above | integer
 | additonalInputLen | Additional input length; set to 0 if not used/supported. See also notes after <<capabilities-table>> above | integer
 | returnedBitsLen | returned bits length | integer
+| counterFieldLen | The length of the counter. Only included when algorithm is "ctrDRBG". | integer
 | tests | Array of individual test cases | array
 |===
 
