Updated EDDSA SigGen to show new requirements and conditions for the contextLength property.

--- a/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
+++ b/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
@@ -19,6 +19,12 @@ The complete list of EDDSA signature generation capabilities may be advertised b
 | contextLength | The lengths the IUT supports in octets for generated context strings | domain | Min: 0, Max: 255
 |===
 
+NOTE: Either Pure or PreHash is required to be set to 'true'.
+
+NOTE: The ContextLength field is *REQUIRED* when the 'Curve' contains "ED-448" or when PreHash is set to 'true'.
+
+NOTE: The ContextLength field is not allowed when *ONLY* testing the 'Curve' "ED-25519" and PreHash is set to 'false'. 
+
 The following is an example
 
 [source, json]
